# CashFlow_2_0

./: .gitignore  ADR_CashFlow_App.md  MVP_Roadmap.md  PDR_CashFlow_App.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_IMPLEMENTATION.md  PHASE4_COMPLETION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  start_dev.py
backend/: env.ofb.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  config_ofb.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  analytics.py  budgets.py  categories.py  import_export.py  ofb_accounts.py  ofb_analytics.py  ofb_multi_bank.py  ofb_payments.py  open_finance.py  transactions.py
backend/app/core/: database_seeder.py  open_finance_brasil.py  open_finance_standards.py
backend/app/models/: __init__.py  budget.py  categorization_rule.py  category.py  transaction.py
backend/app/schemas/: __init__.py  analytics.py  budget.py  category.py  common.py  import_export.py  transaction.py
backend/app/services/: __init__.py  analytics_service.py  budget_service.py  categorization_service.py  category_service.py  export_service.py  import_service.py  ofb_account_service.py  ofb_advanced_analytics_service.py  ofb_multi_bank_service.py  ofb_payment_service.py  ofb_sync_service.py  transaction_service.py
backend/certs/: README.md  signing.key  signing.pem  transport.key  transport.pem
backend/tests/: test_ofb_integration.py  test_ofb_phase3.py  test_ofb_phase4.py  test_phase1_setup.py
docs/: IMPLEMENTATION_STATUS_SUMMARY.md  OPEN_FINANCE_API_INTEGRATION.md  OPEN_FINANCE_BRASIL_ARCHITECTURE.md  OPEN_FINANCE_IMPLEMENTATION_ROADMAP.md  PHASE_4_IMPLEMENTATION_REVIEW.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: test-integration.sh
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/config/: integration.ts
frontend/src/pages/: Analytics.tsx  Budgets.tsx  Categories.tsx  Dashboard.tsx  ImportExport.tsx  OpenFinance.tsx  Settings.tsx  Transactions.tsx
frontend/src/services/: analyticsService.ts  api.ts  budgetService.ts  categoryService.ts  importExportService.ts  transactionService.ts
(+6 files in other folders)
